--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,197 @@
-.space_box{
+* {
+  padding: 0;
+  margin: 0;
+}
+
+.space_box {
   width: 100%;
+  box-sizing: border-box;
+}
+
+.space_padding {
+  padding: 0 90px;
+}
+
+.justify_sb {
+  justify-content: space-between;
+}
+
+.home_box {
+  position: relative;
+  margin-bottom: 300px;
+}
+
+.home_desc {
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 90px;
+  background-color: rgb(242 242 242);
+  width: 685px;
+  height: 400px;
+  z-index: 1;
+  position: absolute;
+  bottom: -200px;
+  left: 50%;
+  margin-left: -150px;
+}
+
+.home_desc_title {
+  font-size: 40px;
+}
+
+.home_desc_info {
+  font-size: 22px;
+}
+
+.home_desc_color {
+  color: #1a2b6d;
+}
+
+.home_desc_line {
+  display: inline-block;
+  width: 113px;
+  height: 5px;
+  background-color: #1a2b6d;
+}
+
+.home_serve_box {
+  position: relative;
+  background-color: #1a2b6d;
+  height: 384px;
+  box-sizing: border-box;
+  padding: 30px;
+  margin-bottom: 248px;
+}
+
+.home_serve_title {
+  font-size: 55px;
+  color: #fff;
+  text-indent: 20vw;
+}
+
+.home_serve_desc {
+  margin-top: 20px;
+  font-size: 16px;
+  color: #fff;
+  text-indent: 20vw;
+}
+
+.home_serve_card_box {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  position: absolute;
+  left: 50%;
+  bottom: -150px;
+  width: 50vw;
+  height: 300px;
+  margin-left: -25vw;
+}
+
+.home_serve_card {
+  position: relative;
+  width: 279px;
+  height: 329px;
+  background-color: #f2f2f2;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  box-sizing: border-box;
+  padding: 40px 20px;
+}
+
+.home_serve_card_title {
+  font-size: 28px;
+  color: #1a2b6d;
+}
+
+.home_serve_card_desc {
+  font-size: 16px;
+  color: #000;
+  margin-bottom: 8px;
+}
+
+.home_serve_card_more {
+  cursor: pointer;
+  font-size: 16px;
+  color: #f33;
+}
+
+.home_serve_card_bg {
+  width: 279px;
+  height: 329px;
+  position: absolute;
+  top: 10px;
+  left: 10px;
+  border: 4px solid #f2f2f2;
+  z-index: 1;
+}
+
+.home_server_success {
+  background-color: #f2f2f2;
+  color: #1a2b6d;
+  width: 100%;
+  height: 440px;
+  text-align: center;
+  font-size: 28px;
+  padding: 80px;
+  box-sizing: border-box;
+}
+
+.home_server_success_title {
+  margin-bottom: 40px;
+}
+
+.home_server_success_desc {
+  width: 720px;
+  margin: 0 auto;
+}
+
+.home_call {
+  position: relative;
+  display: flex;
+  box-sizing: border-box;
+  flex-direction: column;
+  justify-content: space-between;
+  padding: 60px 90px;
+  background-color: rgb(242 242 242);
+  width: 60vw;
+  height: 350px;
+  z-index: 1;
+  margin: 0 auto;
+  margin-bottom: 100px;
+}
+
+.home_desc_more {
+  position: absolute;
+  right: 0;
+  bottom: -52px;
+  width: 177px;
+  height: 52px;
+  line-height: 52px;
+  text-align: center;
+  background-color: #d41317;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
+}
+
+.home_desc_more:hover {
+  background-color: #1a2b6d;
+}
+
+.home_desc_more_icon {
+  position: absolute;
+  right: 177px;
+  bottom: -52px;
+  width: 52px;
+  height: 52px;
+  line-height: 52px;
+  text-align: center;
+  background-color: #1a2b6d;
+  color: #fff;
+  font-size: 18px;
+  cursor: pointer;
 }
